News
====

.. contents::

0.9.7
-----

* Fixed ``EvalException`` returning a Content-type of 'text-html'
  instead of 'text/html' in some cases.

0.9.6
-----

* Renamed the ``paste.util.multidict.multidict`` class to
  ``paste.util.multidict.MultiDict``

0.9.5
-----

* Fixed a security vulnerability in ``paste.urlparser``'s StaticURLParser
  and PkgResourcesParser where, with some servers, you could escape
  the document root.

* Significantly improved ``paste.httpserver``'s (egg:Paste#http)
  performance. It now uses a thread pool: previously it created a new
  thread for every request. To revert back to the old, slower behavior,
  set:

  use_threadpool = false

  in the [server:main] section of the config file.

* More control of where the output of ``paste.debug.prints`` goes.

* Added a warning to ``paste.wsgilib.add_close`` if the upstream
  app_iter consumer doesn't call the ``app_iter.close()`` method.

* Fixed ``testapp.post(params={})``

* Fixed ``paste.translogger.TransLogger`` to log to the Apache combined
  log format as advertised.

* Fixed ``paste.urlparser`` classes to handle quoted characters (e.g.
  %20) in URL paths.

* Changed ``paste.session`` to allow manipulating a session for the
  first time after ``start_response`` is called.

* Added ``paste.wsgilib.add_start_close`` which calls a function just
  before returning the first chunk of the app_iter.

* Changed ``paste.urlmap`` so that it matches domain-specific mappings
  before domain-neutral mappings.

* Fixed IE 6 potentially receiving the following ``"400 Bad Request"``
  error on file downloads:
  'Please check your system clock.
   According to this server, the time provided in the
   If-Modified-Since header is in the future.'

* Added a 'no' keyword argument to ``TestResponse.mustcontain``, so
  you can assert that a response does contain some strings at the same
  time that you assert that a response *does not* contain other
  strings, like::

    res = app.get('/')